tests/netpols/illegal-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-with-illegal-spec
spec: {}
