tests/netpols/ingress-netpol.yaml
 apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
 kind: Ingress
 metadata:
   name: example-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
   - host: openfaas-figlet.local
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
            name: "openfaas-figlet"
            port:
             number: 8080
